News UAT/force-app/main/default/objects/Knowledge__kav/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>