News UAT/force-app/main/default/objects/Knowledge__kav/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Info</fullName>
            </value>
            <value>
                <fullName>Reference/Upskill</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Product Resources</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Agreement/Contract</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>Form/Template</fullName>
            </value>
            <value>
                <fullName>Day in the Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>