News UAT/force-app/main/default/objects/Knowledge__kav/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discover Needs</fullName>
            </value>
            <value>
                <fullName>Develop/Present Solution</fullName>
            </value>
            <value>
                <fullName>Review/Reaffirm Value</fullName>
            </value>
            <value>
                <fullName>Confirmed/Awaiting Bookings</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>