News UAT/force-app/main/default/objects/Knowledge__kav/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>